# HRMS_stage

./: .env.example  .gitignore  Candidate_flow.md  README.md  SEED_LOGINS.md  next.config.mjs  package-lock.json  package.json
ethara-hrms-api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  package-lock.json  pyproject.toml
ethara-hrms-api/alembic/: env.py  script.py.mako
ethara-hrms-api/alembic/versions/: 0d9f3c6a1b7e_add_ta_role.py  1b2c3d4e5f60_employee_document_ai_verification.py  2158f2d70ea1_initial_schema.py  2c3d4e5f6a01_employee_id_card_fields.py  2c6d4ef53e22_add_must_change_password_to_users.py  41fd8cc2f7e7_add_assessment_templates.py  4ad034192586_merge_heads.py  7b3e9c1a2f48_employee_leave_balances.py  7b4e2d1c9a6f_position_email_approval_tokens.py  (+62 more)
ethara-hrms-api/app/: __init__.py  main.py
ethara-hrms-api/scripts/: attendance_sync_cron.py  documenso_sync_cron.py  fix_duplicate_compliance_forms.py  import_date_of_joining.py  import_employees_from_sheet.py  import_manager_mapping.py  ocr_imported_employees.py  repair_employee_auth.py  seed_project_governance.py  sync_attendance.py
ethara-hrms-api/tests/: conftest.py  test_assessment_platform.py  test_assessments.py  test_attendance.py  test_auth.py  test_candidates.py  test_career_applications.py  test_documenso.py  test_employees.py  test_greythr_leave.py  test_integrations.py  test_leave.py  test_logs.py  test_notifications.py  test_positions_approval.py  test_reports.py  test_separation.py  test_signed_profiles.py  test_users.py
(+416 files in other folders)
