[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ethara-hrms-api"
version = "1.0.0"
description = "FastAPI backend for the Ethara HRMS platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "bcrypt>=4.0.0,<5",
  "boto3>=1.39.0",
  "celery[redis]>=5.5.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "gunicorn>=23.0.0",
  "httpx>=0.28.0",
  "redis>=5.0.0",
  "openai>=2.5.0,<3",
  "pydantic-settings>=2.10.0",
  "pydantic>=2.11.0",
  "pypdf>=6.0.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.10.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "slowapi>=0.1.9",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.35.0",
  "pymupdf>=1.27.2.3",
  "pillow>=11.0.0",
  "numpy>=2.0.0",
  "opencv-python-headless>=4.10.0",
  "pytesseract>=0.3.10",
  "pymssql>=2.3.0",
  "google-genai>=2.2.0",
  "gspread>=6.2.1",
  "rapidocr-onnxruntime>=1.4.4",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
